--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-
+    "mqtt": "^2.18.2",
     "socket.io": "^2.0.4"
   }
 }
